Fixed #2201 - Toolbox floating item and survey title overlapped icorrectly

--- a/packages/survey-creator-core/src/components/toolbox/toolbox-tool.scss
+++ b/packages/survey-creator-core/src/components/toolbox/toolbox-tool.scss
@@ -4,7 +4,7 @@
   display: flex;
   position: relative;
   align-items: center;
-  z-index: 1;
+  z-index: 20;
   outline: none;
   cursor: copy;
 
